Support the ability to point to specific branch for emergency releases